// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCalendarMaxMinDates isPopover no selected dates 1`] = `
Object {
  "fromMaxDate": 1625388108613,
  "fromMinDate": 1624524108613,
  "toMaxDate": 1625388108613,
  "toMinDate": 1624524108613,
}
`;

exports[`useCalendarMaxMinDates isPopover no selected to date 1`] = `
Object {
  "fromMaxDate": 1625388108613,
  "fromMinDate": 1624524108613,
  "toMaxDate": 1625388108613,
  "toMinDate": 1625000400000,
}
`;

exports[`useCalendarMaxMinDates no max date 1`] = `
Object {
  "fromMaxDate": 1624524108613,
  "fromMinDate": 1624524108613,
  "toMaxDate": undefined,
  "toMinDate": 1624524108613,
}
`;

exports[`useCalendarMaxMinDates no min date 1`] = `
Object {
  "fromMaxDate": 1622505599999,
  "fromMinDate": undefined,
  "toMaxDate": 1625388108613,
  "toMinDate": 1619827200000,
}
`;
